# genai-reliability-framework

./: .env.example  .gitignore  .vercel-trigger  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: eval.yml
data/finance/source_docs/: src-bank-metrics-001.txt  src-capital-001.txt  src-credit-analysis-001.txt  src-credit-risk-001.txt  src-disclosure-001.txt  src-earnings-001.txt  src-ifrs9-001.txt  src-liquidity-001.txt  src-market-risk-001.txt  src-monetary-policy-001.txt  src-mortgage-001.txt  src-osfi-e23-001.txt  src-privacy-001.txt  src-scope-finance-001.txt  src-suitability-001.txt
data/finance/test_cases/: finance_cases.json
data/medical/source_docs/: src-analgesics-001.txt  src-antibiotics-001.txt  src-cardiology-001.txt  src-cardiology-002.txt  src-diabetes-001.txt  src-diabetes-002.txt  src-diabetes-003.txt  src-drug-interactions-001.txt  src-drug-interactions-002.txt  src-drug-interactions-003.txt  src-dsm5-001.txt  src-electrolytes-001.txt  src-emergency-001.txt  src-hepatology-001.txt  src-hypertension-001.txt  src-insulin-001.txt  src-nephrology-001.txt  src-obstetrics-001.txt  src-opioids-001.txt  src-pharmacology-001.txt  src-pharmacology-002.txt  src-psychiatry-001.txt  src-pulmonary-001.txt  src-scope-001.txt  src-screening-001.txt  src-sepsis-001.txt  src-sleep-001.txt  src-toxicology-001.txt  src-vitals-001.txt
data/medical/test_cases/: sample_cases.json
scripts/: init_db.sql  parse_ci_report.py
src/: cli.py  config.py  models.py
src/adapters/: model_adapter.py
src/api/: main.py
src/evaluation_engine/: nodes.py  pipeline.py  state.py
src/scorers/: bootstrap.py  grounding.py  judge.py
tests/unit/: test_scorers.py
ui/: next.config.js  package-lock.json  package.json
ui/src/: types.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
(+4 files in other folders)
